Fixed whitespace.

--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,3 +1,15 @@
+* {
+  outline: 1px yellow solid;
+}
+
+.title {
+  outline: 2px lightgreen solid;
+}
+
+.text {
+  outline: 2px lightsalmon solid;
+}
+
 .root {
   background-color: #2A2C2F;
   color: white;
